css/404.css
/* ... */
.links-mobile
{
    display: flex;
    flex-direction: column;
    list-style: none;
    align-items: center;
}
.links-mobile a
{
    font-size: 20px;
    font-weight: 700;
    line-height: 80px;
    text-decoration: none;
    color: var(--white);
}
.menu-mobile-social-media
{
    display: flex;
    width: auto;
    margin-top: 20px;
    justify-content: center;
}
.menu-mobile-social-media a
{
    margin: 20px 20px 10px 20px;
}
.menu-mobile-social-media img
{
    width: 40px;
    height: 40px;
}


/* menu mobile button*/
.menu-button
{
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 24px;
    height: 24px;
    cursor: pointer;
    transition: all .90s ease-in-out;
    border: none;
}
.menu-button-burger
{
    width: 24px;
    height: 2px;
    background: var(--white);
    border-radius: 5px;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
    transition: all .5s ease-in-out;
}
.menu-button-burger::before,
.menu-button-burger::after
{
    content: ' ';
    position: absolute;
    width: 24px;
    height: 2px;
    background: var(--white);
    border-radius: 5px;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
    transition: all .5s ease-in-out;
}
.menu-button-burger::before
{
    transform: translateY(8px);
}
.menu-button-burger::after
{
    transform: translateY(-8px);
}

/* menu button animation */
.menu-button.open .menu-button-burger
{
    transform: translateX(-50px);
    background: transparent;
    box-shadow: none;
}
.menu-button.open .menu-button-burger::before
{
    transform: rotate(45deg) translate(35px, -35px);
}
.menu-button.open .menu-button-burger::after
{
    transform: rotate(-45deg) translate(35px, 35px);
}

/* menu mobile container */
.menu-mobile-container
{
    position: relative;
}

/* main */
.main-section
{
    display: flex;
    flex-direction: column;
    width: 100%;
    height: auto;
    padding: 20px;
}

/* visuals 404!!! */
.visuals-container-404
{
    position: relative;
    z-index: -3;
    width: 100%;
    height: 100vh;
    overflow-x: hidden;
    overflow-y: hidden;
}
.stars, .twinkling {
    position:absolute;
    top:0;
    left:0;
    right:0;
    bottom:0;
    width:100%;
    height:100%;
    display:block;
}
.stars {
    background: transparent url(../assets/404/stars.png) repeat top center;
    z-index:-3;
}
.twinkling{
    background:transparent url(../assets/404/twinkling.png) repeat top center;
    z-index:-2;
    animation:move-twink-back 200s linear infinite;
}
@keyframes move-twink-back {
    from {background-position:0 0;}
    to {background-position:-10000px 5000px;}
}
.visuals-404
{
    position: relative;
    width: 100%;
    height: 100%;
}
.linear-gradient-404
{
    position: fixed;
    /* z-index: -1; */
    bottom: 0;
    width: 100%;
    height: 80vh;
    background-image: linear-gradient(to bottom, rgba(255,0,0,0), rgb(0, 0, 0));
}
.title-404
{
    display: flex;
    position: relative;
    z-index: -2;
    width: 100%;
    height: auto;
    padding: 150px 20px 0 20px;
    justify-content: center;
}
.title-404 span
{
    font-size: 200px;
    font-weight: 600;
    align-self: center;
}
.title-404 span:nth-child(2)
{
    width: 200px;
}
.title-404 img
{
    position: absolute;
    width: 250px;
    height: 250px;
    top: 140px;
    animation: planetDaniel 18s infinite ease-in-out;
}
@keyframes planetDaniel
{
    0%{
        rotate: 50deg;
        scale: 1;
    } 
    25%{
        /* rotate: 60deg; */
        scale: 1.1;
    } 
    50%{
        rotate: 80deg;
    }
    75%{
        /* rotate: 40deg; */
    }
    100%{
        rotate: 50deg;
        scale: 1;
    }
}
.astronaut-404
{
    display: flex;
    position: relative;
    z-index: -2;
    width: 100%;
    height: auto;
    justify-content: center;
}
.astronaut-404 img:nth-child(1)
{
    position: absolute;
    width: 250px;
    top: -120px;
    left: 50%;
    rotate: -40deg;
    animation: astronaut1-404 18s infinite ease-in-out;
}
@keyframes astronaut1-404
{
    0%{
        rotate: -40deg;
        scale: 1;
    } 
    25%{
        /* rotate: 60deg; */
        scale: .9;
    } 
    50%{
        rotate: -20deg;
    }
    75%{
        rotate: -35deg;
    }
    100%{
        rotate: -40deg;
        scale: 1;
    }
}

.astronaut-404 img:nth-child(2)
{
    position: absolute;
    width: 150px;
    top: -120px;
    left: 24%;
    rotate: -40deg;
    transform: scaleX(-1);
    animation: astronaut2-404 18s infinite ease-in-out;
}
@keyframes astronaut2-404
{
    0%{
        rotate: 40deg;
        scale: 1;
    } 
    19%{
        rotate: 15deg;
        /* scale: .9; */
    } 
    40%{
        rotate: 20deg;
    }
    85%{
        rotate: 35deg;
        scale: .8deg;
    }
    100%{
        rotate: 40deg;
        scale: 1;
    }
}

.astronaut-404 img:nth-child(3)
{
    position: absolute;
    width: 150px;
    top: 40px;
    left: 37%;
    rotate: 0deg;
    animation: nave-404 18s infinite ease-in-out;
}
@keyframes nave-404
{
    0%{
        rotate: 0deg;
        scale: 1;
    } 
    19%{
        /* rotate: 15deg; */
        /* scale: .9; */
    } 
    60%{
        rotate: 20deg;
        /* scale: 1.2; */
    }
    75%{
        scale: 1.2;
    }
    100%{
        rotate: 0deg;
        scale: 1;
    }
}

.astronaut-404 img:nth-child(4)
{
    position: absolute;
    z-index: -1;
    width: 50px;
    top: -170px;
    right: 26%;
    rotate: 11deg;
    animation: astronaut3-404 16s infinite ease-in-out;
}
@keyframes astronaut3-404
{
    0%{
        rotate: 10deg;
        scale: .9;
    } 
    28%{
        /* rotate: 60deg; */
        scale: 1;
    } 
    74%{
        rotate: -10deg;
    }
    75%{
        /* rotate: -35deg; */
    }
    100%{
        rotate: 10deg;
        scale: .9;
    }
}
/* ... */

